# tf-modules-atlas-wip

./: .gitignore  README.md  justfile  pyproject.toml
config/: mongodbatlas.yaml
modules/01_cluster/: main.tf  main_cloud_backup_schedule.tf  variables.tf  variables_cloud_backup_schedule.tf
modules/02_project/: main.tf  main_auditing.tf  variables_auditing.tf  variables_children.tf
modules/03_alert_configuration/: main.tf  output.tf  variables.tf
modules/04_cloud_provider_aws/: aws.tf  encryption_at_rest.tf  main.tf  output.tf  variables.tf
modules/05_auth_db/: main.tf  variables.tf
modules/06_networking_aws/: main.tf  outputs.tf  variables.tf
modules/07_atlas_aws/: aws.tf  main.tf  outputs.tf  variables.tf
modules/08_cluster_poc/: README.md  main.tf  output.tf  variables.tf  variablesx.tf
py_modules/tf_mongodbatlas/: mongodbatlas_access_list_api_key.py  mongodbatlas_advanced_cluster.py  mongodbatlas_alert_configuration.py  mongodbatlas_api_key.py  mongodbatlas_api_key_project_assignment.py  mongodbatlas_auditing.py  mongodbatlas_backup_compliance_policy.py  mongodbatlas_cloud_backup_schedule.py  mongodbatlas_cloud_backup_snapshot.py  mongodbatlas_cloud_backup_snapshot_export_bucket.py  mongodbatlas_cloud_backup_snapshot_export_job.py  mongodbatlas_cloud_backup_snapshot_restore_job.py  mongodbatlas_cloud_provider_access_authorization.py  mongodbatlas_cloud_provider_access_setup.py  mongodbatlas_cloud_user_org_assignment.py  mongodbatlas_cloud_user_project_assignment.py  mongodbatlas_cloud_user_team_assignment.py  mongodbatlas_cluster.py  (+43 more)
(+402 files in other folders)
