[project]
name = "tf-modules-atlas-wip"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = ["atlas-init==0.10.1"]
# FOR LOCAL DEVELOPPMENT
# dependencies = ["atlas-init"]

# [tool.uv.sources]
# atlas-init = { path = "../atlas-init", editable = true }

[tool.uv]
package = false
prerelease = "allow"

[tool.ruff]
line-length = 88
target-version = "py313"
show-fixes = true


[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio==0.15.1",
    "pytest-cov==3.0.0",
    "pytest-regressions==2.0.1",
    "pytest-subtests==0.5.0",
    "xdoctest==0.15.4",
    "pyright>=1.1.392.post0",
    "ruff>=0.9.2",
]
